tests/error/struct/struct_rec.mml
type s = {n: int; s:s; }

let rec s:int = {n = 3; s=s; } in s
